add readme and change some wording

--- a/pilet/sampleMud/ManyHover.razor
+++ b/pilet/sampleMud/ManyHover.razor
@@ -6,7 +6,7 @@
     <HoverMenu />
 }
 
-<MudButton Href="/single">other page</MudButton>
+<MudButton Href="/single">single menu</MudButton>
 <MudThemeProvider IsDarkMode="true" />
 <MudDialogProvider />
 <MudSnackbarProvider />
