--- a/pilet/sampleMud/SingleHover.razor
+++ b/pilet/sampleMud/SingleHover.razor
@@ -1,6 +1,6 @@
 @page "/single"
 <HoverMenu />
-<MudButton Href="/many">other page</MudButton>
+<MudButton Href="/many">many menus</MudButton>
 
 <MudThemeProvider IsDarkMode="true" />
 <MudDialogProvider />
